--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
   <!-- container -->
-  <div class="container-fluid">
-    <header>
-      <div class="desktop-image">
-        <h1 class="text-primary">hjskckxn</h1>
+  <div class="container-main h-100 border border-danger bg-black">
+    <header class="border border-danger">
+      <!-- header wrapper -->
+      <div class="header-wrapper d-flex justify-content-between p-5">
+        <!-- logo  -->
+        <div class="logo">
+          <img src="./assets/images/logo.svg" alt="logo image" class="image-responsive" />
+        </div>
+        <!-- End logo  -->
+        <!-- navigagitin  -->
+          <ul class="nav text-white fs-4 cursor-pointer	">
+            <li class="nav-item me-5">About</li>
+            <li class="nav-item me-5">Services</li>
+            <li class="nav-item me-5">Projects</li>
+            <li class="nav-item me-5 active">Contact</li>
+          </ul>
+        <!-- navigagitin  -->
+      </div>
+      <div class="text-wrapper d-flex flex-column justify-content-center align-items-center">
+        <h1 class="text-white primary-font-family">We are creatives</h1>
+        <img src="./assets/images/icon-arrow-down.svg" alt="arrow-icon" class="mt-8" />
       </div>
     </header>
   </div>
 </body>
+
 </html>
